Added autotools artifacts, svn:ignore
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@3740 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -1,13 +1,19 @@
 ## Process this file with automake to produce Makefile.in
 
-AM_CFLAGS     =
-AM_FFLAGS     =
-AM_FCFLAGS    =
+AM_CFLAGS     = -I$(top_srcdir) -I$(top_builddir)
+AM_CFLAGS    += -I$(top_srcdir)/lib -I$(top_builddir)/lib
+AM_FCFLAGS    = -I$(top_srcdir) -I$(top_builddir)
+AM_FCFLAGS   += -I$(top_srcdir)/lib -I$(top_builddir)/lib
 AM_LDFLAGS    =
 bin_PROGRAMS  =
 BUILT_SOURCES =
 BUILT_DOCS    =
 EXTRA_DIST    =
+
+## Sample progams
+#bin_PROGRAMS   += driver
+#driver_SOURCES  = driver.c
+#driver_LDADD    =
 
 # Required for AX_AM_MACROS
 @INC_AMINCLUDE@
