--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -1,12 +1,14 @@
 ## Process this file with automake to produce Makefile.in
 
-AM_CFLAGS          =
-AM_FCFLAGS         =
+AM_CFLAGS     = -I$(top_srcdir) -I$(top_builddir)
+AM_CFLAGS    += -I$(top_srcdir)/lib -I$(top_builddir)/lib
+AM_FCFLAGS    = -I$(top_srcdir) -I$(top_builddir)
+AM_FCFLAGS   += -I$(top_srcdir)/lib -I$(top_builddir)/lib
 AM_LDFLAGS         =
 bin_PROGRAMS       = # Append below
 check_PROGRAMS     = # Append below
 noinst_HEADERS     = # Append below
-noinst_LTLIBRARIES = # Append below
+lib_LTLIBRARIES    = # Append below
 pkginclude_HEADERS = # Append below
 
 # Use MPI compilers
@@ -16,6 +18,7 @@ FC=@MPIFC@
 # Headers installed with the library
 pkginclude_HEADERS += esio.h
 
+# Source files built into the library
 lib_LTLIBRARIES     += libesio.la
 libesio_la_SOURCES   = esio.c
 
