--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,8 +1,9 @@
 ## Process this file with automake to produce Makefile.in
 
-AM_CFLAGS      =
-AM_FCFLAGS     =
-AM_LDFLAGS     =
+AM_CFLAGS     = -I$(top_srcdir) -I$(top_builddir)
+AM_CFLAGS    += -I$(top_srcdir)/lib -I$(top_builddir)/lib
+AM_FCFLAGS    = -I$(top_srcdir) -I$(top_builddir)
+AM_FCFLAGS   += -I$(top_srcdir)/lib -I$(top_builddir)/lib
 bin_PROGRAMS   = # Append below
 check_PROGRAMS = # Append below
 noinst_HEADERS = # Append below
