Added sample code under make check
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@3743 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -64,7 +64,7 @@ DX_RTF_FEATURE([OFF])
 DX_XML_FEATURE([OFF])
 DX_PDF_FEATURE([OFF])
 DX_PS_FEATURE([OFF])
-DX_INIT_DOXYGEN([suzerain],[doxygen.cfg],[doxygen-doc])
+DX_INIT_DOXYGEN([esio],[doxygen.cfg],[doxygen-doc])
 
 dnl ------------------------------------------------
 dnl Generate Makefiles
