--- a/doxygen.cfg
+++ b/doxygen.cfg
@@ -773,7 +773,7 @@ DOCSET_FEEDNAME        = "Doxygen generated docs"
 # reverse domain-name style string, e.g. com.mycompany.MyDocSet. Doxygen
 # will append .docset to the name.
 
-DOCSET_BUNDLE_ID       = edu.utexas.ices.pecos.suzerain
+DOCSET_BUNDLE_ID       = edu.utexas.ices.psdns
 
 # If the HTML_DYNAMIC_SECTIONS tag is set to YES then the generated HTML
 # documentation will contain sections that can be hidden and shown after the
