Added sample MPI programs that link
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@3744 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -10,10 +10,17 @@ BUILT_SOURCES =
 BUILT_DOCS    =
 EXTRA_DIST    =
 
-## Sample progams
-#bin_PROGRAMS   += driver
-#driver_SOURCES  = driver.c
-#driver_LDADD    =
+# Use MPI compilers
+CC=@MPICC@
+FC=@MPIFC@
+
+# Sample progams
+bin_PROGRAMS       += hellompi_c
+hellompi_c_SOURCES  = hellompi_c.c
+
+bin_PROGRAMS              += hellompi_f90
+hellompi_f90_SOURCES       = hellompi_f90.f90
+hellompi_f90_LIBTOOLFLAGS  = --tag=FC
 
 # Required for AX_AM_MACROS
 @INC_AMINCLUDE@
