Added HDF5 dependency to autoconf
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@4642 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -47,6 +47,8 @@ dnl ------------------------------------------------
 dnl MPI toolchain checks
 dnl ------------------------------------------------
 AC_LANG([C])
+AC_CHECK_HEADER([hdf5.h],,AC_MSG_ERROR([Could not find HDF5 header.]))
+AC_CHECK_LIB([hdf5],[main],,AC_MSG_ERROR([Could not link against HDF5 library.]))
 ACX_MPI(,AC_MSG_ERROR(Could not find MPI compilation tools for C, e.g. mpicc.))
 AC_LANG([Fortran])
 ACX_MPI(,AC_MSG_ERROR(Could not find MPI compilation tools for Fortran, e.g. mpif90.))
