Now building C and Fortran sublibraries and combining
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@4646 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -7,8 +7,9 @@ AM_FCFLAGS   += -I$(top_srcdir)/lib -I$(top_builddir)/lib
 AM_LDFLAGS         =
 bin_PROGRAMS       = # Append below
 check_PROGRAMS     = # Append below
-noinst_HEADERS     = # Append below
 lib_LTLIBRARIES    = # Append below
+noinst_HEADERS     = # Append below
+noinst_LTLIBRARIES = # Append below
 pkginclude_HEADERS = # Append below
 
 # Use MPI compilers
@@ -18,9 +19,20 @@ FC=@MPIFC@
 # Headers installed with the library
 pkginclude_HEADERS += esio.h
 
-# Source files built into the library
+# Source files built into the library:
+# Need distinct C and Fortran sublibraries for libtool --tag purposes
 lib_LTLIBRARIES     += libesio.la
-libesio_la_SOURCES   = esio.c
+libesio_la_SOURCES   = # Required even if empty
+libesio_la_LIBADD    = libesio_c.la libesio_f.la
+
+# C sources built into the public esio library
+noinst_LTLIBRARIES   += libesio_c.la
+libesio_c_la_SOURCES  = esio.c
+
+# Fortran sources built into the public library
+noinst_LTLIBRARIES        += libesio_f.la
+libesio_f_la_SOURCES       = esiof.90
+libesio_f_la_LIBTOOLFLAGS  = --tag=FC
 
 # Required for AX_AM_MACROS
 @INC_AMINCLUDE@
