Fix .90 -> .f90 in Makefile.am
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@4648 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -31,7 +31,7 @@ libesio_c_la_SOURCES  = esio.c
 
 # Fortran sources to place into the public library
 noinst_LTLIBRARIES        += libesio_f.la
-libesio_f_la_SOURCES       = esiof.90
+libesio_f_la_SOURCES       = esiof.f90
 libesio_f_la_LIBTOOLFLAGS  = --tag=FC
 
 # Required for AX_AM_MACROS
