Building and linking Nick's sample
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@4649 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -1,14 +1,15 @@
 ## Process this file with automake to produce Makefile.in
 
-AM_CFLAGS     = -I$(top_srcdir) -I$(top_builddir)
-AM_CFLAGS    += -I$(top_srcdir)/lib -I$(top_builddir)/lib
-AM_FCFLAGS    = -I$(top_srcdir) -I$(top_builddir)
-AM_FCFLAGS   += -I$(top_srcdir)/lib -I$(top_builddir)/lib
-AM_LDFLAGS    =
-bin_PROGRAMS  =
-BUILT_SOURCES =
-BUILT_DOCS    =
-EXTRA_DIST    =
+AM_CFLAGS      = -I$(top_srcdir) -I$(top_builddir)
+AM_CFLAGS     += -I$(top_srcdir)/lib -I$(top_builddir)/lib
+AM_FCFLAGS     = -I$(top_srcdir) -I$(top_builddir)
+AM_FCFLAGS    += -I$(top_srcdir)/lib -I$(top_builddir)/lib
+AM_FCFLAGS    += -I$(top_srcdir)/esio -I$(top_builddir)/esio
+AM_LDFLAGS     =
+bin_PROGRAMS   =
+BUILT_SOURCES  =
+BUILT_DOCS     =
+EXTRA_DIST     =
 
 # Use MPI compilers
 CC=@MPICC@
@@ -21,6 +22,16 @@ hellompi_c_SOURCES  = hellompi_c.c
 bin_PROGRAMS              += hellompi_f90
 hellompi_f90_SOURCES       = hellompi_f90.f90
 hellompi_f90_LIBTOOLFLAGS  = --tag=FC
+
+# test program
+bin_PROGRAMS       += npmtest
+npmtest_SOURCES   = npmtest.c
+
+# Nick's test program
+bin_PROGRAMS      += main
+main_SOURCES       = header.f90 main.f90
+main_LDADD         = ../esio/libesio.la
+main_LIBTOOLFLAGS  = --tag=FC
 
 # Required for AX_AM_MACROS
 @INC_AMINCLUDE@
