Updated CLEANFILES for .mod
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@4651 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -33,5 +33,8 @@ main_SOURCES       = header.f90 main.f90
 main_LDADD         = ../esio/libesio.la
 main_LIBTOOLFLAGS  = --tag=FC
 
+# Clean up Fortran modules on 'make clean'
+CLEANFILES = header.mod
+
 # Required for AX_AM_MACROS
 @INC_AMINCLUDE@
