--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -24,8 +24,8 @@ hellompi_f90_SOURCES       = hellompi_f90.f90
 hellompi_f90_LIBTOOLFLAGS  = --tag=FC
 
 # test program
-bin_PROGRAMS       += npmtest
-npmtest_SOURCES   = npmtest.c
+bin_PROGRAMS       += 
+npmtest_SOURCES   = 
 
 # Nick's test program
 bin_PROGRAMS      += main
