Added release number to library with libtool
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@5378 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
-dl ------------------------------------------------
-dnl Package name and version number
-dnl ------------------------------------------------
+dnl ----------------------------------------------------
+dnl Package name and release number
+dnl ---------------------------------------------------
 AC_INIT(esio, [0.0.1], [rhys@ices.utexas.edu])
 AC_REVISION([$Id$])
 
