--- a/configure.ac
+++ b/configure.ac
@@ -47,6 +47,9 @@ dnl ------------------------------------------------
 dnl MPI toolchain checks
 dnl ------------------------------------------------
 AC_LANG([C])
+PKG_CHECK_MODULES(HPCT, hpct >= 0.25.2)
+AC_SUBST(HPCT_CFLAGS)
+AC_SUBST(HPCT_LIBS)
 AC_CHECK_HEADER([hdf5.h],,AC_MSG_ERROR([Could not find HDF5 header.]))
 AC_CHECK_LIB([hdf5],[main],,AC_MSG_ERROR([Could not link against HDF5 library.]))
 ACX_MPI(,AC_MSG_ERROR(Could not find MPI compilation tools for C, e.g. mpicc.))
