Added pkgconfig support to esio
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@5640 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,6 +19,10 @@ AUX_DIST = build-aux/install-sh    \
            build-aux/mkinstalldirs \
            build-aux/missing
 
+# Support for pkgconfig
+pkgconfigdir   = $(libdir)/pkgconfig
+pkgconfig_DATA = esio.pc
+
 # Files to be deleted by make clean variants
 MOSTLYCLEANFILES = $(DX_CLEANFILES)
 DISTCLEANFILES = aminclude.am
