Added AC_FC_WRAPPERS to esio configure.ac
See http://www.gnu.org/software/autoconf/manual/autoconf.html#Fortran-Compiler for usage details


git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@5642 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -25,6 +25,7 @@ AX_CHECK_ENABLE_DEBUG
 AC_PROG_CC
 AX_PROG_CC_C99_CFLAGS(,AC_MSG_ERROR([Compiler cannot support ISO C99]))
 AC_PROG_FC
+AC_FC_WRAPPERS
 AC_CACHE_SAVE
 
 dnl ------------------------------------------------
