esio: add some HPCT hooks in prep for unit tests
Incorporated HPCT into build/link process.
Still having some GNU-specific trouble (I think) with
the Fortran-to-C interface for strings.  Specifically
the _namelen parameter coming into hpct_create_scratch_dir
is the length of the string storage in Fortran, not the
length of the string as reported by Fortran's len_trim().
Need to check this out.


git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@6819 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -45,14 +45,29 @@ AX_CFLAGS_WARN_ALL_ANSI
 AC_CACHE_SAVE
 
 dnl ------------------------------------------------
+dnl HPC Toolkit checks
+dnl ------------------------------------------------
+AC_LANG([C])
+PKG_CHECK_MODULES(HPCT, hpct >= 0.26.0)
+# Must trim HPCT values from pkgconfig to appending to work in Makefile.am
+HPCT_CFLAGS=CS_TRIM(${HPCT_CFLAGS})
+HPCT_LIBS=CS_TRIM(${HPCT_LIBS})
+AC_SUBST(HPCT_CFLAGS)
+AC_SUBST(HPCT_LIBS)
+AC_CACHE_SAVE
+
+dnl ------------------------------------------------
+dnl HDF5 checks
+dnl ------------------------------------------------
+AC_LANG([C])
+AC_CHECK_HEADER([hdf5.h],,AC_MSG_ERROR([Could not find HDF5 header.]))
+AC_CHECK_LIB([hdf5],[main],,AC_MSG_ERROR([Could not link against HDF5 library.]))
+AC_CACHE_SAVE
+
+dnl ------------------------------------------------
 dnl MPI toolchain checks
 dnl ------------------------------------------------
 AC_LANG([C])
-PKG_CHECK_MODULES(HPCT, hpct >= 0.25.2)
-AC_SUBST(HPCT_CFLAGS)
-AC_SUBST(HPCT_LIBS)
-AC_CHECK_HEADER([hdf5.h],,AC_MSG_ERROR([Could not find HDF5 header.]))
-AC_CHECK_LIB([hdf5],[main],,AC_MSG_ERROR([Could not link against HDF5 library.]))
 ACX_MPI(,AC_MSG_ERROR(Could not find MPI compilation tools for C, e.g. mpicc.))
 AC_LANG([Fortran])
 ACX_MPI(,AC_MSG_ERROR(Could not find MPI compilation tools for Fortran, e.g. mpif90.))
