--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -5,6 +5,7 @@ AM_CFLAGS      += -I$(top_srcdir)/lib -I$(top_builddir)/lib
 AM_FCFLAGS      = -I$(top_srcdir) -I$(top_builddir)
 AM_FCFLAGS     += -I$(top_srcdir)/lib -I$(top_builddir)/lib
 AM_FCFLAGS     += -I$(top_srcdir)/esio -I$(top_builddir)/esio
+AM_LDFLAGS      = # Append below
 bin_PROGRAMS    = # Append below
 check_PROGRAMS  = # Append below
 noinst_HEADERS  = # Append below
@@ -13,6 +14,11 @@ noinst_PROGRAMS = # Append below
 # Use MPI compilers
 CC=@MPICC@
 FC=@MPIFC@
+
+## Pick up HPCT library installation
+AM_CFLAGS  += $(HPCT_CFLAGS)
+AM_FCFLAGS += $(HPCT_CFLAGS)/../lib
+AM_LDFLAGS += $(HPCT_LIBS)
 
 ## Sample test program
 check_PROGRAMS += sample
