ESIO: fixes for using libgrvy
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@11321 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -48,9 +48,7 @@ dnl ------------------------------------------------
 dnl HPC Toolkit checks
 dnl ------------------------------------------------
 AC_LANG([C])
-PKG_CHECK_MODULES(grvy >= 0.27.0)
-AX_PECOS_DEFAULTS
-AX_PATH_GRVY
+PKG_CHECK_MODULES(GRVY, grvy >= 0.27.0)
 AC_SUBST(GRVY_CFLAGS)
 AC_SUBST(GRVY_LIBS)
 AC_CACHE_SAVE
