esio: move Doxygen to docs
Updated README with prereqs
Also add .gitignore


git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@13975 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,10 +4,10 @@ ACLOCAL_AMFLAGS = -I m4
 AUTOMAKE_OPTIONS = foreign
 
 # Build in these directories:
-SUBDIRS = lib esio tests apps doc
+SUBDIRS = lib esio tests apps
 
 # Distribute these items:
-DIST_SUBDIRS = lib esio tests apps doc
+DIST_SUBDIRS = lib esio tests apps
 EXTRA_DIST= bootstrap $(DX_CONFIG)
 
 # Eliminate .svn directories in dist tarball
