--- a/configure.ac
+++ b/configure.ac
@@ -82,7 +82,7 @@ DX_RTF_FEATURE([OFF])
 DX_XML_FEATURE([OFF])
 DX_PDF_FEATURE([OFF])
 DX_PS_FEATURE([OFF])
-DX_INIT_DOXYGEN([esio],[doxygen.cfg],[doxygen-doc])
+DX_INIT_DOXYGEN([esio],[doxygen.cfg],[docs])
 
 dnl ------------------------------------------------
 dnl Generate Makefiles
@@ -90,7 +90,6 @@ dnl ------------------------------------------------
 AC_CONFIG_FILES([
     Makefile
     apps/Makefile
-    doc/Makefile
     lib/Makefile
     esio/Makefile
     tests/Makefile
