esio: use HDF5 macro from autoconf archive
with updates to look for specifically serial or
parallel HDF5 installations.  Also adds scanning
for Fortran flags (though not a check that Fortran
was enabled).

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@14089 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -27,6 +27,7 @@ hellompi_f90_LIBTOOLFLAGS  = --tag=FC
 bin_PROGRAMS      += main
 main_SOURCES       = header.f90 main.f90
 main_LDADD         = ../esio/libesio.la
+main_LDADD        += $(HDF5_LDFLAGS)
 main_LIBTOOLFLAGS  = --tag=FC
 
 # Clean up Fortran modules on 'make clean'
