esio: incorporate Nick's PSDNS HDF5 implementation
Includes cleanups, warning fixes, reformatting, and automate stuff
Will break regression.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@14328 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -23,7 +23,6 @@ dnl Check for compiler toolchain
 dnl ------------------------------------------------
 AX_CHECK_ENABLE_DEBUG
 AC_PROG_CC
-AX_PROG_CC_C99_CFLAGS(,AC_MSG_ERROR([Compiler cannot support ISO C99]))
 AC_PROG_FC
 AC_FC_WRAPPERS
 AC_CACHE_SAVE
@@ -54,19 +53,19 @@ AC_SUBST(GRVY_LIBS)
 AC_CACHE_SAVE
 
 dnl ------------------------------------------------
-dnl HDF5 checks
-dnl ------------------------------------------------
-AC_LANG([C])
-AX_LIB_HDF5([])
-AC_CACHE_SAVE
-
-dnl ------------------------------------------------
 dnl MPI toolchain checks
 dnl ------------------------------------------------
 AC_LANG([C])
 ACX_MPI(,AC_MSG_ERROR(Could not find MPI compilation tools for C, e.g. mpicc.))
 AC_LANG([Fortran])
 ACX_MPI(,AC_MSG_ERROR(Could not find MPI compilation tools for Fortran, e.g. mpif90.))
+AC_CACHE_SAVE
+
+dnl ------------------------------------------------
+dnl HDF5 checks
+dnl ------------------------------------------------
+AC_LANG([C])
+AX_LIB_HDF5([parallel])
 AC_CACHE_SAVE
 
 dnl ------------------------------------------------
