esio: pull in iokernel branch sample app
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@14401 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -11,9 +11,9 @@ BUILT_SOURCES  =
 BUILT_DOCS     =
 EXTRA_DIST     =
 
-# Use MPI compilers
-CC=@MPICC@
-FC=@MPIFC@
+# Use parallel HDF5 compiler wrappers per configure.ac
+CC=@H5CC@
+FC=@H5FC@
 
 # Sample progams
 bin_PROGRAMS       += hellompi_c
