esio: add docs target
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@14407 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/Makefile.am
+++ b/Makefile.am
@@ -45,6 +45,9 @@ all-local:  libtool
 # Documentation hooks in with the 'html' target
 html-local: doxygen-run
 
+# Target for all documentation
+docs: doxygen-run
+
 # Make sure that libtool is up to date
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status --recheck
