esio: move to Karl's grvy_new.m4 macro
pkg-config-based lookup fails for Fortran
because grvy.mod is not contained with the include
directory.


git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@14409 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -15,6 +15,11 @@ EXTRA_DIST     =
 CC=@H5CC@
 FC=@H5FC@
 
+## Pick up GRVY library installation
+AM_CFLAGS  += $(GRVY_CFLAGS)
+AM_FCFLAGS += $(GRVY_FCFLAGS)
+AM_LDFLAGS += $(GRVY_LIBS)
+
 # Sample progams
 bin_PROGRAMS       += hellompi_c
 hellompi_c_SOURCES  = hellompi_c.c
