esio: PSDNS test program not segfaulting
Hurray!


git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@14523 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -28,11 +28,13 @@ bin_PROGRAMS              += hellompi_f90
 hellompi_f90_SOURCES       = hellompi_f90.f90
 hellompi_f90_LIBTOOLFLAGS  = --tag=FC
 
-# Nick's test program
+# PSDNS iokernel test program
 bin_PROGRAMS      += main
 main_SOURCES       = header.f90 main.f90
 main_LDADD         = ../esio/libesio.la
 main_LIBTOOLFLAGS  = --tag=FC
+# Fortran module dependencies
+main.o: header.f90 main.f90
 
 # Clean up Fortran modules on 'make clean'
 CLEANFILES = header.mod
