esio: enable Fortran warnings
Includes updates to ax_cflags_warn_all.m4 that I've
submitted back to the autoconf archive via
http://savannah.gnu.org/patch/index.php?7335

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@14566 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -19,20 +19,29 @@ AX_ADD_AM_CTAGSFLAGS
 AC_CACHE_SAVE
 
 dnl ------------------------------------------------
-dnl Check for compiler toolchain
+dnl Check for C compiler toolchain
 dnl ------------------------------------------------
 AX_CHECK_ENABLE_DEBUG
 AC_PROG_CC
+AC_LANG_PUSH([C])
 if test "x$ax_enable_debug" != "xno"; then
     AX_TRACEBACK()
 fi
 AX_PATH_GRVY_NEW([0.27],[no])
-AX_CFLAGS_WARN_ALL_ANSI
+AX_CFLAGS_WARN_ALL_ANSI([CFLAGS])
+AC_LANG_POP([C])
+
+dnl ------------------------------------------------
+dnl Check for Fortran compiler toolchain
+dnl ------------------------------------------------
 AC_PROG_FC
+AC_LANG_PUSH([Fortran])
 if test "x$ax_enable_debug" != "xno"; then
     AX_TRACEBACK()
 fi
 AC_FC_WRAPPERS
+AX_FCFLAGS_WARN_ALL
+AC_LANG_POP([Fortran])
 AC_CACHE_SAVE
 
 dnl ------------------------------------------------
