esio: add fctx header only C/C++ unit test lib
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@14787 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -8,7 +8,7 @@ AM_FCFLAGS     += -I$(top_srcdir)/esio -I$(top_builddir)/esio
 AM_LDFLAGS      = # Append below
 bin_PROGRAMS    = # Append below
 check_PROGRAMS  = # Append below
-noinst_HEADERS  = # Append below
+noinst_HEADERS  = fct.h
 noinst_PROGRAMS = # Append below
 
 # Use parallel HDF5 compiler wrappers per configure.ac
