esio: checkpoint rewrite
1) Include error handling following GSL
2) Rewrite C to use opaque state struct
3) Rewrite C to allow multiple layouts
4) Rewrite C to allow multiple data types


git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@14839 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -28,7 +28,8 @@ if test "x$ax_enable_debug" != "xno"; then
     AX_TRACEBACK()
 fi
 AX_PATH_GRVY_NEW([0.27],[no])
-AX_CFLAGS_WARN_ALL_ANSI([CFLAGS])
+AX_CFLAGS_WARN_ALL
+AX_PROG_CC_C99_CFLAGS(,AC_MSG_ERROR([Compiler cannot support ISO C99]))
 AC_LANG_POP([C])
 
 dnl ------------------------------------------------
