--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -30,11 +30,11 @@ libesio_la_LIBADD    = libesio_c.la libesio_f.la
 
 # C sources to place into the public library
 noinst_LTLIBRARIES   += libesio_c.la
-libesio_c_la_SOURCES  = esiow.c esiofb.c error.c
+libesio_c_la_SOURCES  = esio.c error.c
 
 # Fortran sources to place into the public library
 noinst_LTLIBRARIES        += libesio_f.la
-libesio_f_la_SOURCES       = esiof.f90
+libesio_f_la_SOURCES       = esio.f90
 libesio_f_la_LIBTOOLFLAGS  = --tag=FC
 
 # Required for AX_AM_MACROS
