esio: begin populating unit tests
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@14857 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -19,7 +19,14 @@ AX_ADD_AM_CTAGSFLAGS
 AC_CACHE_SAVE
 
 dnl ------------------------------------------------
-dnl Check for C compiler toolchain
+dnl Look for HDF5 installation and compiler wrappers
+dnl ------------------------------------------------
+AC_LANG([C])
+AX_LIB_HDF5([parallel])
+AC_CACHE_SAVE
+
+dnl ------------------------------------------------
+dnl Manipulate C compiler settings
 dnl ------------------------------------------------
 AX_CHECK_ENABLE_DEBUG
 AC_PROG_CC
@@ -31,9 +38,10 @@ AX_PATH_GRVY_NEW([0.27],[no])
 AX_CFLAGS_WARN_ALL
 AX_PROG_CC_C99_CFLAGS(,AC_MSG_ERROR([Compiler cannot support ISO C99]))
 AC_LANG_POP([C])
+AC_CACHE_SAVE
 
 dnl ------------------------------------------------
-dnl Check for Fortran compiler toolchain
+dnl Manipulate Fortran compiler settings
 dnl ------------------------------------------------
 AC_PROG_FC
 AC_LANG_PUSH([Fortran])
@@ -46,32 +54,12 @@ AC_LANG_POP([Fortran])
 AC_CACHE_SAVE
 
 dnl ------------------------------------------------
-dnl Add traceback information to compiler flags
-dnl ------------------------------------------------
-
-dnl ------------------------------------------------
 dnl Enable GNU libtool
 dnl Current version checks also in Makefile.am
 dnl ------------------------------------------------
 LT_INIT
 LT_PREREQ([2.2.6])
 AC_SUBST(LIBTOOL_DEPS)
-AC_CACHE_SAVE
-
-dnl ------------------------------------------------
-dnl MPI toolchain checks
-dnl ------------------------------------------------
-AC_LANG([C])
-ACX_MPI(,AC_MSG_ERROR(Could not find MPI compilation tools for C, e.g. mpicc.))
-AC_LANG([Fortran])
-ACX_MPI(,AC_MSG_ERROR(Could not find MPI compilation tools for Fortran, e.g. mpif90.))
-AC_CACHE_SAVE
-
-dnl ------------------------------------------------
-dnl HDF5 checks
-dnl ------------------------------------------------
-AC_LANG([C])
-AX_LIB_HDF5([parallel])
 AC_CACHE_SAVE
 
 dnl ------------------------------------------------
