esio: add check-programs target
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@14891 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -58,5 +58,9 @@ TESTS_ENVIRONMENT  = ESIO_TEST_INPUT_DIR=$(srcdir)
 TESTS_ENVIRONMENT += ESIO_TEST_OUPUT_DIR=.
 TESTS = $(check_PROGRAMS)
 
+# Build test programs without running 'make check'
+.PHONY: check-programs
+check-programs: $(check_PROGRAMS)
+
 # Required for AX_AM_MACROS
 @INC_AMINCLUDE@
