--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -20,6 +20,8 @@ FC=@H5FC@
 # Headers installed with the library
 pkginclude_HEADERS += esio.h
 pkginclude_HEADERS += error.h
+# Headers internal to the library
+noinst_HEADERS += layout.h
 
 # Public ESIO library containing C and Fortran interfaces
 # Need distinct C and Fortran sublibraries for libtool --tag purposes
@@ -30,7 +32,7 @@ libesio_la_LIBADD    = libesio_c.la libesio_f.la
 
 # C sources to place into the public library
 noinst_LTLIBRARIES   += libesio_c.la
-libesio_c_la_SOURCES  = esio.c error.c
+libesio_c_la_SOURCES  = error.c layout.c esio.c
 
 # Fortran sources to place into the public library
 noinst_LTLIBRARIES        += libesio_f.la
