esio: add layout_{s,g}et
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@15117 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -42,5 +42,9 @@ noinst_LTLIBRARIES        += libesio_f.la
 libesio_f_la_SOURCES       = esio.f90
 libesio_f_la_LIBTOOLFLAGS  = --tag=FC
 
+# Extra things to clean up
+clean-local:
+	rm -f *.mod *.gcno
+
 # Required for AX_AM_MACROS
 @INC_AMINCLUDE@
